--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
     <!-- PWA / Manifest Connection -->
     <link rel="manifest" href="manifest.json">
     
-    <!-- NEW CREATIVE ICONS (Blue Gradient W) -->
-    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/10832/10832322.png">
-    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/10832/10832322.png">
+    <!-- CORRECTED ICONS (Blue Square with White 'W') -->
+    <link rel="apple-touch-icon" href="https://ui-avatars.com/api/?name=Wiki&background=2563eb&color=fff&size=512&length=1&font-size=0.6&bold=true">
+    <link rel="icon" type="image/png" href="https://ui-avatars.com/api/?name=Wiki&background=2563eb&color=fff&size=512&length=1&font-size=0.6&bold=true">
 
     <!-- iOS Native Settings -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Wiki Modern">
 
-    <!-- Libraries -->
+    <!-- Libraries (Same as before) -->
     <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
     <style>
-        /* ... (Keep your existing CSS exactly the same) ... */
-        /* Just copy the <style> block from your previous file here */
-        /* VARIABLES */
+        /* ... Keep your existing CSS below ... */
+        /* (Don't delete your CSS, just paste the head above it) */
         :root {
-            --bg-main: #f8fafc; --bg-card: #ffffff; --text-primary: #0f172a; --text-secondary: #64748b;
+            --bg-main: #f8fafc;
+            --bg-card: #ffffff; --text-primary: #0f172a; --text-secondary: #64748b;
             --border: #e2e8f0; --accent: #2563eb; --accent-soft: #eff6ff; --font-serif: 'Merriweather', serif;
             --safe-top: env(safe-area-inset-top, 0px); --safe-bottom: env(safe-area-inset-bottom, 20px);
         }
