--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
     <!-- SEASONAL LOADER -->
     <script src="seasonal.js" defer></script>
 
+    <!-- Easter Eggs (Fun decorations for specific pages) -->
+    <link rel="stylesheet" href="easter-eggs.css">
+    <script src="easter-eggs.js" defer></script>
+
     <style>
+
         /* VARIABLES */
         :root {
             --bg-main: #f8fafc; --bg-card: #ffffff; --text-primary: #0f172a; --text-secondary: #64748b;
